<resources>
    <string name="app_name">EldadsHWSelector</string>
    <string name="title_activity_main">HW Selector</string>
    <string name="assignments">Assignments</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">yellow</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="blue">Blue</string>
    <string name="test">Test</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="comment">Comment (i.e Present)</string>
    <string name="name">Name</string>
    <string name="rights">All apps were created by Eldad Corem - All Rights Reserved©</string>
    <string name="order_by">Order By:</string>
    <string name="transitions">Transitions</string>
    <string name="scene_6a">Scene 6A</string>
    <string name="scene_6b">Scene 6B</string>

    <string-array name="view_array">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="type_array">
        <item>Date</item>
        <item>Name</item>
    </string-array>

    <string-array name="transition_array_titles">
        <item>Fade Transition</item>
        <item>Slide Left-Right Transition</item>
        <item>Slide Up-Down Transition</item>
    </string-array>

    <string-array name="transition_array_values">
        <item>Fade</item>
        <item>Slide Left-Right</item>
        <item>Slide Up-Down</item>
    </string-array>
</resources>
