<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lesson_three_b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eldad.corem.exercises.lessonThreeB">

    <TextView
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:theme="?attr/actionBarStyle"
        android:id="@+id/textViewViolet"
        android:text="@string/violet"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndigo"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

    <TextView
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:background="@color/indigo"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewIndigo"
        android:text="@string/indigo"
        app:layout_constraintTop_toBottomOf="@+id/textViewBlue"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewYellow"
        android:text="@string/yellow"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrange"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

    <TextView
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewOrange"
        android:text="@string/orange"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewRed"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

    <TextView
        android:layout_width="64dp"
        android:layout_height="24dp"
        android:background="@color/red"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewRed"
        android:text="@string/red"
        android:textColor="@android:color/black"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewBlue"
        android:text="@string/blue"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreen"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

    <TextView
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/textViewGreen"
        android:text="@string/green"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewYellow"
        app:layout_constraintLeft_toLeftOf="@+id/textViewRed" />

</android.support.constraint.ConstraintLayout>
