<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_birthday"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eldad.corem.exercises.addBirthday">

    <DatePicker
        android:layout_width="348dp"
        android:layout_height="396dp"
        android:id="@+id/datePicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/comment"
        android:hint="@string/comment"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:layout_width="130dp"
        android:layout_height="39dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:hint="@string/name"
        android:text=""
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/comment" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add2"
        android:onClick="addToDB"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
